umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_indigo_complexring6.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 100
bond_count: 130
sum_formula: C100
graph6: "~?@che?IC??G?_@?H?G??G?`????????W??O??@???????_??@???@???C_??A????@???AC?????????G????C????@????@G????G?????@?????`????????????G?????@????????????@G?????????????C??????@???????G??????C_??????O???????@???????O_???????????????@????????C????????G???????@G???????@?????????@????????CG??????????????????@?????????@??????????_????????@G?????????O??????????C?????????CG?????????????????????C??????????@???????????G??????????C_??????????O???????????@???????????O_???GG??????????@?C????????????O????????????G?????G??????_?????O??O?????????????_????????@??@??????????O????????????H?????????????Q??_@????????????O?A??????????@?????????_?????_??????C????????????O?C???????????_??_??????????GG????????????@?O????????????O??G???????????A???C??????????????C?@?????????????G??G???@??????????A????A??????????@?????G?G????????????@??C?????????????"
